Delete the overflow css properties to render the page correctly

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-* {
-  overflow-x: auto;
-  overflow-y: auto;
-}
-
 main {
   display: flex;
   flex-direction: row;
